change device and active session type
